--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,11 @@ language: go
 sudo: false
 go:
   - 1.8.x
-  - master
 install:
+  - go get -u github.com/mattn/goveralls golang.org/x/tools/cmd/cover github.com/Masterminds/glide github.com/mitchellh/gox github.com/ory/go-acc
   - glide install
 script:
   - go test $(glide novendor)
+  - go-acc -o coverage.txt $(glide novendor)
+  - go test -race -short $(glide novendor | grep -v cmd)
+  - goveralls -service=travis-ci -coverprofile=coverage.txt
