--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ install:
   - go get -u github.com/mattn/goveralls golang.org/x/tools/cmd/cover github.com/Masterminds/glide github.com/mitchellh/gox github.com/ory/go-acc
   - glide install
 script:
-  - go test $(glide novendor)
-  - go-acc -o coverage.txt $(glide novendor)
+  - go-acc -o coverage.out $(glide novendor)
   - go test -race -short $(glide novendor | grep -v cmd)
-  - goveralls -service=travis-ci -coverprofile=coverage.txt
+  - goveralls -service=travis-ci -coverprofile=coverage.out
